--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fruit Intelligence</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Fruit Intelligence</title>
+
+  <!-- Tailwind CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- React CDN -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+
+</head>
+
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+
+  <div id="app"></div>
+
+  <script>
+    function App() {
+      const [preview, setPreview] = React.useState(null);
+      const [result, setResult] = React.useState(null);
+      const [loading, setLoading] = React.useState(false);
+
+      const API_URL = "https://YOUR_BACKEND.hf.space/predict";
+
+      async function handleUpload(e) {
+        const file = e.target.files[0];
+        setPreview(URL.createObjectURL(file));
+
+        const form = new FormData();
+        form.append("file", file);
+
+        setLoading(true);
+
+        const res = await fetch(API_URL, {
+          method: "POST",
+          body: form,
+        });
+
+        const data = await res.json();
+        setResult(data);
+        setLoading(false);
+      }
+
+      return React.createElement(
+        "div",
+        { className: "bg-white shadow-xl rounded-xl p-8 w-96" },
+        [
+          React.createElement("h1", { className: "text-2xl font-bold mb-4 text-center" }, "Fruit Intelligence 🍎"),
+          React.createElement("input", {
+            type: "file",
+            accept: "image/*",
+            onChange: handleUpload,
+            className: "mb-4",
+          }),
+          preview && React.createElement("img", { src: preview, className: "w-full rounded mb-4" }),
+          loading &&
+            React.createElement("p", { className: "text-blue-500 text-center" }, "Analyzing..."),
+          result &&
+            React.createElement(
+              "div",
+              { className: "mt-4" },
+              [
+                React.createElement("h2", { className: "font-bold text-lg" }, "Prediction: " + result.fruit),
+                React.createElement("p", { className: "mt-2 text-gray-700" }, result.info),
+                React.createElement("p", { className: "mt-2 text-gray-500 italic" }, result.explanation),
+              ]
+            )
+        ]
+      );
+    }
+
+    ReactDOM.createRoot(document.getElementById("app")).render(React.createElement(App));
+  </script>
+</body>
 </html>
